name:                OTM
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/OTM#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Concurrency
build-type:          Simple
extra-source-files:  cbits
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     OTM, Lib
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2.1
  build-tools:         c2hs
  default-language:    Haskell2010
  C-sources:           cbits/OTM.c
  Include-dirs:        cbits
  Includes:            OTM.h, Rts.h, RtsAPI.h, stdlib.h
  extra-libraries:     HSrts_thr_debug-ghc7.10.3
  -- HSrts_thr-ghc7.10.3 
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  cc-options:          "-DTHREADED_RTS"

executable OTM-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , OTM
  default-language:    Haskell2010

test-suite OTM-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , OTM
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/OTM
